force-app/main/default/objects/Account_Asset__c/Account_Asset__c.object-meta.xml
<CustomObject>
    <label>Account Asset</label>
    <nameField>
        <displayFormat>Asset-{00}</displayFormat>
        <label>Account Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>