force-app/main/default/objects/Account_Asset__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Account Assets</relationshipLabel>
    <relationshipName>Account_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>