force-app/main/default/objects/Account_Asset__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>Asset__r.License_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>