force-app/main/default/objects/Account_Asset__c/fields/IsOwnerAccount__c.field-meta.xml
<CustomField>
    <fullName>IsOwnerAccount__c</fullName>
    <formula>Account__c  =  Asset__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Account</label>
    <type>Checkbox</type>
</CustomField>