force-app/main/default/objects/Account_Asset__c/fields/License_Count__c.field-meta.xml
<CustomField>
    <fullName>License_Count__c</fullName>
    <formula>Asset__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>