force-app/main/default/objects/Account_Asset__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <formula>Asset__r.Line_of_Business__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line of Business</label>
    <type>Text</type>
</CustomField>